--- a/src/components/Header.astro
+++ b/src/components/Header.astro
@@ -1,3 +1,6 @@
+---
+import profile from "../profile";
+---
 <div
   class="sticky lg:hidden top-0 z-30 flex h-16 w-full justify-center bg-opacity-90 backdrop-blur transition-all duration-100 bg-base-100 text-base-content shadow-sm"
 >
@@ -10,7 +13,7 @@
       </label>
     </div>
     <div class="navbar-center">
-      <a class="btn btn-ghost normal-case text-xl" href="/">Manuel Ernesto ⚡️</a>
+  <a class="btn btn-ghost normal-case text-xl" href="/">{profile.name} ⚡️</a>
     </div>
     <div class="navbar-end"></div>
   </div>
