--- a/src/components/SideBarFooter.astro
+++ b/src/components/SideBarFooter.astro
@@ -1,30 +1,14 @@
+---
+import profile from "../profile";
+---
 <div
     class="block sticky pointer-events-none bottom-10 bg-base-200 justify-center h-12 [mask-image:linear-gradient(transparent,#000000)]"
 >
 </div>
 
 <div class="social-icons px-4 pb-5 pt-1 flex self-center justify-center sticky bottom-0 bg-base-200">
-    <a
-        href="https://manuelernestog.github.io/support-my-work/"
-        target="_blank"
-        class="mx-3"
-        aria-label="Support my work"
-        title="Support my work"
-    >
-        <svg
-            xmlns="http://www.w3.org/2000/svg"
-            width="24"
-            height="24"
-            viewBox="0 0 24 24"
-            style="fill: currentColor;transform: ;msFilter:;"
-            ><path
-                fill-rule="evenodd"
-                clip-rule="evenodd"
-                d="M5 2h2v3H5zm4 0h2v3H9zm4 0h2v3h-2zm6 7h-2V7H3v11c0 1.654 1.346 3 3 3h8c1.654 0 3-1.346 3-3h2c1.103 0 2-.897 2-2v-5c0-1.103-.897-2-2-2zm-4 9a1 1 0 0 1-1 1H6a1 1 0 0 1-1-1V9h10v9zm2-2v-5h2l.002 5H17z"
-            ></path></svg
-        >
-    </a>
-    <a href="https://github.com/manuelernestog" target="_blank" class="mx-3" aria-label="Github" title="Github">
+    {profile.links?.github && (
+    <a href={profile.links.github} target="_blank" class="mx-3" aria-label="Github" title="Github">
         <svg
             xmlns="http://www.w3.org/2000/svg"
             width="24"
@@ -38,7 +22,9 @@
             ></path>
         </svg>
     </a>
-    <a href="https://twitter.com/manuelernestog" target="_blank" class="mx-3" aria-label="Twitter" title="Twitter">
+    )}
+    {profile.links?.twitter && (
+    <a href={profile.links.twitter} target="_blank" class="mx-3" aria-label="Twitter" title="Twitter">
         <svg
             xmlns="http://www.w3.org/2000/svg"
             width="24"
@@ -50,8 +36,10 @@
             ></path>
         </svg>
     </a>
+    )}
+    {profile.links?.linkedin && (
     <a
-        href="https://www.linkedin.com/in/manuelernestogr"
+        href={profile.links.linkedin}
         target="_blank"
         class="mx-3"
         aria-label="Linkedin"
@@ -68,6 +56,7 @@
             ></path>
         </svg>
     </a>
+    )}
 
     <a href="/rss.xml" target="_blank" class="mx-3" aria-label="RSS Feed" title="RSS Feed">
         <svg
