--- a/src/components/SideBarMenu.astro
+++ b/src/components/SideBarMenu.astro
@@ -1,4 +1,5 @@
 ---
+import profile from "../profile";
 const { sideBarActiveItemID } = Astro.props;
 const activeClass = "bg-base-300"; // For primary color replace with `active` class
 ---
@@ -9,15 +10,16 @@ const activeClass = "bg-base-300"; // For primary color replace with `active` cl
     <li><a class="py-3 text-base" id="services" href="/services">Services</a></li>
     <li><a class="py-3 text-base" id="store" href="/store">Store</a></li>
     <li><a class="py-3 text-base" id="blog" href="/blog/">Blog</a></li>
-    <li><a class="py-3 text-base" id="cv" href="/cv">CV</a></li>
-    <li>
-        <a
-            class="py-3 text-base"
-            href="mailto:contact.manuelernestog@gmail.com"
-            target="_blank"
-            referrerpolicy="no-referrer-when-downgrade">Contact</a
-        >
-    </li>
+    <li><a class="py-3 text-base" id="cv" href="/cv">Resume</a></li>
+        {profile.email && (
+            <li>
+                    <a
+                            class="py-3 text-base"
+                            href={`mailto:${profile.email}`}
+                            target="_blank"
+                            referrerpolicy="no-referrer-when-downgrade">Contact</a>
+            </li>
+        )}
 </ul>
 
 <script define:vars={{ sideBarActiveItemID: sideBarActiveItemID, activeClass: activeClass }}>
